--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -49,11 +49,21 @@
           <a class="brand" href="#">Audit Bundle</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="{{ path( 'wgaudits' ) }}">view audit list</a></li>
-              <li><a href="{{ path( 'wgauditforms' ) }}">view form list</a></li>
-              <li><a href="{{ path( 'wgauditformsections' ) }}">view section list</a></li>
-              <li><a href="{{ path( 'wgauditformfields' ) }}">view field list</a></li>
-              <li><a href="{{ path( 'wgaudit_iconset' )}}">view iconset</a></li>
+              <li>
+                  <a href="{{ path( 'wgaudits' ) }}">view audit list</a>
+              </li>
+              <li>
+                  <a href="{{ path( 'wgauditforms' ) }}">view form list</a>
+              </li>
+              <li>
+                  <a href="{{ path( 'wgauditformsections' ) }}">view section list</a>
+              </li>
+              <li>
+                  <a href="{{ path( 'wgauditformfields' ) }}">view field list</a>
+              </li>
+              <li>
+                  <a href="{{ path( 'wgaudit_iconset' )}}">view iconset</a>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
