--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -20,7 +20,7 @@
                             <i class="icon-plus"></i> Add Section
                         </a>
                         <a class="btn btn-mini" 
-                           href="#">
+                           href="{{ path( 'wgauditform_delete', { 'id': auditform.id }) }}">
                             <i class="icon-trash"></i> Delete Form
                         </a>
                     </noscript>
@@ -46,7 +46,8 @@
                             <li class="divider"></li>
                         {% endif %}
                         <li>
-                            <a class="audit-form-delete" href="#">
+                            <a class="audit-form-delete" 
+                               href="{{ path( 'wgauditform_delete', { 'id': auditform.id }) }}">
                                 <i class="icon-trash"></i> Delete Form
                             </a>
                         </li>
@@ -115,14 +116,23 @@
                                         </a>
                                     </li>
                                     <li>
+                                    {% if ufields is not empty %}
+                                        <li class="divider"></li>
+                                        {% for field in ufields %}
+                                        <li>
+                                            <a data-field-id={{ field.id }} class="audit-field-add"
+                                               href="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
+                                                <i class="icon-plus"></i> {{ field.title }}
+                                            </a>
+                                        </li>
+                                        {% endfor %}
+                                        <li class="divider"></li>
+                                    {% endif %}
+                                    </li>
+                                    <li>
                                         <a class="audit-section-remove" 
                                            href="{{ path( 'wgauditform_remove', { 'id' : auditform.id ,'section_id': section.id } ) }}">
                                             <i class="icon-minus"></i> Remove Section
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="audit-form-add">
-                                            <i class="icon-plus"></i> Add Field
                                         </a>
                                     </li>
                                 </ul>
