--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -15,12 +15,13 @@
                         <i class="icon-ok"></i> Save Form
                     </button>
                     <noscript>
+                    {# need to load an edit form for Section and pass the auditform.id #}
                         <a class="btn btn-mini" 
                            href="#">
                             <i class="icon-plus"></i> Add Section
                         </a>
                         <a class="btn btn-mini" 
-                           href="{{ path( 'wgauditform_delete', { 'id': auditform.id }) }}">
+                           href="{{ path( 'wgauditform_delete', { 'id': auditform.id } ) }}">
                             <i class="icon-trash"></i> Delete Form
                         </a>
                     </noscript>
@@ -37,7 +38,7 @@
                             <li class="divider"></li>
                             {% for section in usections %}
                             <li>
-                                <a data-section-id={{ section.id }} class="audit-section-add"
+                                <a data-section-id="{{ section.id }}" class="audit-section-add"
                                    href="{{ path( 'wgauditform_add_section', { 'id' : auditform.id ,'section_id': section.id } ) }}">
                                     <i class="icon-plus"></i> {{ section.title }}
                                 </a>
@@ -91,57 +92,10 @@
                 <tbody>
                 {% if auditform.sections != null %}
                     {% for section in auditform.sections %}
-                    <tr class="audit-section-row">
-                        <td colspan=2><strong>Section {{ section.id }}: {{ section.title }}</strong></td>
-                        <td colspan=2>{{ section.description }}</td>
-                        <td>
-                            <div class="btn-group">
-                                <a class="btn btn-mini" 
-                                   href="{{ path( 'wgauditformsection_view', { 'id': section.id } ) }}">
-                                    <i class="icon-eye-open"></i> View Section
-                                </a>
-                                    <noscript>
-                                        <a class="btn btn-mini"
-                                            href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">
-                                            <i class="icon-pencil"></i> Edit Section
-                                        </a>
-                                    </noscript>
-                                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">
-                                            <i class="icon-pencil"></i> Edit Section
-                                        </a>
-                                    </li>
-                                    <li>
-                                    {% if ufields is not empty %}
-                                        <li class="divider"></li>
-                                        {% for field in ufields %}
-                                        <li>
-                                            <a data-field-id={{ field.id }} class="audit-field-add"
-                                               href="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
-                                                <i class="icon-plus"></i> {{ field.title }}
-                                            </a>
-                                        </li>
-                                        {% endfor %}
-                                        <li class="divider"></li>
-                                    {% endif %}
-                                    </li>
-                                    <li>
-                                        <a class="audit-section-remove" 
-                                           href="{{ path( 'wgauditform_remove', { 'id' : auditform.id ,'section_id': section.id } ) }}">
-                                            <i class="icon-minus"></i> Remove Section
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
+                    {% include 'WGAuditBundle:AuditFormSection:load.html.twig' %}
                         {% if section.fields != null %}
                             {% for field in section.fields %}
-                            <tr class="audit-form-field">
+                            <tr class="audit-field-row">
                                 <td></td>
                                 <td>{{ field.title }}</td>
                                 <td>{{ field.description }}</td>
@@ -180,73 +134,5 @@
         </form>
     </div>
 </div>
-<script language="javascript">
-// find to which section this field belongs to
-// get last row of this section
-// add new row after the last on
-
-
-//$('.audit-section-row').next('.audit-form-field').css('background-color', 'yellow');
-//$('.audit-section-row').next('.audit-section-row').prev().css('background-color', 'red');
-
-$( function()
-{
-    // Remove Section
-    $( '.audit-section-remove' ).click( function()
-    {
-        var url = $( this ).attr( 'href' );
-        var that = this;
-
-        $.ajax(
-        {
-            url: url,
-            type: "POST",
-            success: function( response )
-            {
-                $( that ).closest( '.audit-section-row' ).nextUntil( '.audit-section-row' ).remove();
-                $( that ).closest( '.audit-section-row' ).remove();
-            },
-            error: function( response )
-            {
-                //console.log( 'failure: ' + response );
-            }
-
-        });
-        return false;
-    });
-
-    // Edit Section
-    $( '.audit-section-edit' ).click( function()
-    {
-        // TODO: pop a new row bellow the current one and populate with the EditSectionForm
-        // OR: get current row and replace by value of the EditSectionForm
-        return false;
-    });
-
-    // Add Section
-    $( '.audit-section-add' ).click( function()
-    {
-        var url = $( this ).attr( 'href' );
-        var sectionId = $( this ).attr( 'data-section-id' );
-        
-        loadUrl = routePatternLoad.replace( '{id}', sectionId );
-
-        $.ajax(
-        {
-            url: url,
-            type: "POST",
-            success: function( response )
-            {
-                $( '.audit-section-row' ).last( '.audit-section-row' ).after().load( loadUrl );
-            },
-            error: function( response )
-            {
-                //console.log( 'failure: ' + response );
-            }
-        });
-        return false;
-    });
-});
-</script>
 {% endblock %}
 
