--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -30,7 +30,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="audit-section-new" href="#">
+                            <a class="wgaudit-section-new" href="#">
                                 <i class="icon-pencil"></i> Add Field
                             </a>
                         </li>
@@ -38,7 +38,7 @@
                             <li class="divider"></li>
                             {% for field in ufields %}
                             <li>
-                                <a data-field-id={{ field.id }} class="audit-field-add"
+                                <a data-field-id="{{ field.id }}" class="wgaudit-field-add"
                                    href="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
                                     <i class="icon-plus"></i> {{ field.title }}
                                 </a>
@@ -46,7 +46,7 @@
                             {% endfor %}
                             <li class="divider"></li>
                             <li>
-                                <a class="audit-section-delete" 
+                                <a class="wgaudit-section-delete" 
                                    href="{{ path( 'wgauditformsection_delete', { 'id' : section.id  } ) }}">
                                     <i class="icon-trash"></i> Delete Section
                                 </a>
@@ -105,51 +105,7 @@
             </thead>
             <tbody>
             {% for field in section.fields %}
-                    <tr class="audit-field-row">
-                    <td>{{ field.title }}</td>
-                    <td>{{ field.description }}</td>
-                    <td>{{ field.weight }}</td>
-                    <td>{% if field.fatal == 1 %}
-                            <i class="icon-check"/>
-                        {% else %}
-                            <i class="icon-check-empty"/>
-                        {% endif %}
-                    </td>
-                    <td>
-                        <div class="btn-group">
-                            <a class="btn btn-mini" 
-                               href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">
-                                <i class="icon-eye-open"></i> View
-                            </a>
-                            <noscript>
-                                <a class="btn btn-mini"
-                                   href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
-                                    <i class="icon-pencil"></i> Edit
-                                </a>
-                                <a class="btn btn-mini" 
-                                   href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
-                                    <i class="icon-minus"></i> Remove
-                                </a>
-                            </noscript>
-                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
-                                        <i class="icon-pencil"></i> Edit
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="audit-field-remove" 
-                                       href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
-                                        <i class="icon-minus"></i> Remove
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
+                    {% include 'WGAuditBundle:AuditFormField:load.html.twig' %}
             {% else %}
                 <tr>
                     <td class="5">no fields assigned yet</td>
@@ -173,53 +129,4 @@
         </table>
     </div>
 </div>
-<script type="text/javascript">
-var routePatternLoad = {{ routePatternLoad }};
-
-$( function()
-{
-    $( '.audit-field-remove' ).click( function()
-    {
-        var url = $( this ).attr( 'href' );
-        var that = this;
-        $.ajax(
-        {
-            url: url,
-            type: "POST",
-            success: function( response )
-            {
-                $( that ).closest( '.audit-field-row' ).remove();
-            },
-            error: function( response )
-            {
-                //console.log( 'failure: ' + response );
-            }
-        });
-        return false;
-    });
-
-    $( '.audit-field-add' ).click( function()
-    {
-        var url = $( this ).attr( 'href' );
-        var fieldId = $( this ).attr( 'data-field-id' );
-
-        loadUrl = routePatternLoad.replace( '{id}', fieldId );
-
-        $.ajax(
-        {
-            url: url,
-            type: "POST",
-            success: function( response )
-            {
-                $( '.audit-field-row' ).last( '.audit-field-row' ).after().load( loadUrl );
-            },
-            error: function( response )
-            {
-                //console.log( 'failure: ' + response );
-            }
-        });
-        return false;
-    });
-});
-</script>
 {% endblock %}
