--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -34,6 +34,7 @@
                    }
             });
             </script>
+            <script src="{{ asset( 'bundles/wgaudit/js/wgaudit.js' ) }}" type="text/javascript"></script>
     {% endblock %}
   </head>
   <body>
